Fixed rounded corners on sections, and fixed spacing in stacked view

--- a/app/sass/910.scss
+++ b/app/sass/910.scss
@@ -24,6 +24,7 @@ html {
             #background-and-experience {
                 margin-left: 0;
                 margin-right: 0;
+                margin-top: 0;
             }
         }
     }
