--- a/app/sass/_round.scss
+++ b/app/sass/_round.scss
@@ -1,3 +1,3 @@
 %round {
-    border-radius: 0.1em;
+    border-radius: 0.2rem;
 }
